# VCDiffSharp

./: .gitignore  .gitmodules  CMakeLists.txt  VCDiffSharp.sln
VCDiffSharp/: Native.cs
VCDiffSharp.UntiTests/: Test.cs  VCDiffSharp.UntiTests.csproj
src/: vc-diff.cc  vc-diff.h
